restructure ALL javascript

--- a/auth/login/index.html
+++ b/auth/login/index.html
@@ -10,7 +10,7 @@
     />
 
     <link rel="stylesheet" href="src/css/style.css" />
-    <script type="module" defer src="/src/js/"></script>
+    <script type="module" defer src="/src/js/router/index.js"></script>
   </head>
   <body>
     <!-- Login form -->
