--- a/auth/register/index.html
+++ b/auth/register/index.html
@@ -13,7 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&display=swap"
       rel="stylesheet"
     />
-    <script type="module" defer src="/src/js/"></script>
+    <script type="module" defer src="/src/js/router/index.js"></script>
   </head>
   <body>
     <div class="container mt-5">
